--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <a href="./1-timer.html">Go to Timer Task</a>
       </li>
       <li>
-        <a href="./2-form.html">Go to Form Task</a>
+        <a href="./2-snackbar.html">Go to Form Task</a>
       </li>
     </ul>
   </body>
